Opened 10 years ago
Closed 7 years ago
#12035 closed bug (fixed)
iprowifi4965 panic with Intel PRO/Wireless 5150
Reported by: | Bambr | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Drivers/Network/iprowifi4965 | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
Hello, Tried to boot haiku (49129 nightly is the last one), got panic during boot process (screen photo attached). Surprise for me is that there is no "Intel Pro Wireless 4965" device in this netbook.
Piece of listdev command: === device Network controller [2|80|0]
vendor 8086: Intel Corporation device 423d: WiMAX/WiFi Link 5150
===
Piece of listusb command: === 8086:1406 /dev/bus/usb/4/5 "Intel Corp." "WiMAX Connection 2400m" ver. 0000 ===
When I boot in safe mode and try ls /dev/net/
in terminal, I got similar panic screen.
Is this correct that my hardware is unsupported by haiku now? Anyway, there is no reason to broke on this :)
Thanks!
Attachments (3)
Change History (23)
by , 10 years ago
Attachment: | IMG_20150429_143106.jpg added |
---|
comment:1 by , 10 years ago
comment:2 by , 10 years ago
An actual panic message is missing from this image. Could you crash it again, type message
in KDL and take a new photo?
To prevent this panic you can blacklist the driver. See https://www.haiku-os.org/guides/daily-tasks/blacklist-packages
comment:3 by , 10 years ago
debug> message PANIC: vm_page_fault: unhandled page fault in kernel space at 0x4, ip 0x81302131
Ok?
About blacklisting - yes, I know I can do this, I already have system booted with safe mode and safe screen driver, and it seems to be working. Unfortunately, it is unusable without network :(
comment:4 by , 10 years ago
Could you please tell the last version which worked on this laptop (if it ever did)?
comment:5 by , 10 years ago
I didn't tried previous versions. If you provide me with several revision tags which I can try, I will do this just now. I can try to search revisions with driver updates by myself, but seems I have no time to do this today.
comment:6 by , 10 years ago
Here are the previous versions: http://download.haiku-os.org/nightly-images/x86_gcc2_hybrid Driver history http://cgit.haiku-os.org/haiku/log/src/add-ons/kernel/drivers/network/wlan/iprowifi4965
comment:7 by , 10 years ago
comment:8 by , 10 years ago
BTW, I looked to driver sources and I see my wifi card in device list, seems it should be supported by the driver?
Tried alpha, similar result, but a little later - I can see blue screen with haiku cursor for a second (new builds seems to panic during boot, I didn't see cursor).
PANIC: vm_page_fault: unhandled page fault in kernel space at 0x18, ip 0x8178ebdb
Tried hrev43643, does not work too. Do I need to try earlier releases?
comment:9 by , 10 years ago
Seems, it never worked with my wifi. Intel(R) PRO/Wireless 5150 support was added in hrev38734, and it does not work. hrev35928 works fine (of course, driver don't know my device and is not loaded).
Ticket should be renamed to "iprowifi4965 panic with Intel PRO/Wireless 5150" if possible.
What can I do next?
comment:10 by , 10 years ago
Summary: | wifi driver panic during boot on Lenovo S10-3t → iprowifi4965 panic with Intel PRO/Wireless 5150 |
---|
comment:11 by , 10 years ago
I think I have the same problem, same KDL when booting from a USB key. PC is acer aspire 6920. Tried with one of the recent nightlies.
The output from lspci (from linux) is as follows:
08:00.0 Network controller: Intel Corporation PRO/Wireless 4965 AG or AGN [Kedron] Network Connection (rev 61)
When in the debugger i called the 'syslog' command and the last line was the driver saying something like
Could not read EEPROM
by , 7 years ago
Attachment: | IMG_20180630_110226.jpg added |
---|
comment:15 by , 7 years ago
The kernel panic should be gone with hrev52068. If you can now boot, please look for iprowifi4965
in the syslog, and include whatever you find here.
comment:16 by , 7 years ago
I see some progress :) Now I have blank black screen during boot. But when I choose VESA video driver in boot options, the kernel panic is here again (see screen)
by , 7 years ago
Attachment: | IMG_20180706_095254.jpg added |
---|
comment:18 by , 7 years ago
Retried with hrev52087, got the same screen during usual boot (no safe-mode options).
comment:20 by , 7 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
The last KDL was the same as the last one in #8623, and that one is now fixed, so this one almost certainly is also.
If you are interested on any other tests/checks for this netbook (not only with this bug), I will try to help you. Just ask what you need to help the project.