freebsd11_wlan: Don't try to ifdetach if we never ifattached.

The FreeBSD developers say that there are "lots of bugs around driver attach
failures," and this looks like one of them.

Hopefully helps with #12035.